cabal-version:      2.4
name:               zurihac-workshop
version:            0.1.0.0
synopsis:           Workshop proudly presented at ZuriHac 2022
homepage:
license:            NONE
author:             Alejandro Serrano
maintainer:         trupill@gmail.com
extra-source-files:
    README.md

library
    exposed-modules:
      Session1.Task1, 
      Session1.Task2, 
      Session1.Task3, 
      Session1.Operational1, 
      Session1.Operational2
    -- other-modules:
    build-depends:    base >= 4.14, text, random >= 1.2, monad-loops, mtl
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -fdefer-typed-holes
