cabal-version:      2.4
name:               session1
version:            0.1.0.0
synopsis:           The Legend of DSLs - Workshop presented at ZuriHac 2022
homepage:
license:            NONE
author:             Alejandro Serrano
maintainer:         trupill@gmail.com
extra-source-files:
    README.md

library
    exposed-modules:
      Task1
      Task2
      Task3
      Operational1
      Operational2
    -- other-modules:
    build-depends:    base >= 4.14, text, random >= 1.2, monad-loops, mtl, tasty, tasty-quickcheck, generic-arbitrary
    default-language: Haskell2010
    ghc-options:      -fdefer-typed-holes
