cabal-version:      2.4
name:               session2
version:            0.1.0.0
synopsis:           Adventures in IO - Workshop presented at ZuriHac 2022
homepage:
license:            NONE
author:             Alejandro Serrano
maintainer:         trupill@gmail.com
extra-source-files:
    README.md

library
    exposed-modules:  DiceRoll, DiceRollSolution, DiceRollIncrement, CloudyRolly
    -- other-modules:
    build-depends:    base >= 4.14, network-simple, bytestring, cereal, random, aeson, text, safe-exceptions, stm, unordered-containers
    default-language: Haskell2010
    ghc-options:      -fdefer-typed-holes
